--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,3 +1,73 @@
+    /* -- BACKGROUND --*/
+
 body {
-    background-color: rgb(163, 213, 255);
+    background-color: hsl(318, 100%, 98%);
 }
+
+    /* -- HEADER --*/
+
+nav {
+    background-color: hsl(280, 100%, 92%);
+    display: flex; 
+    justify-content: space-between;
+    padding: 30px 10%; 
+}
+
+#main-menu .about-me {
+    background-color: transparent;
+    font-family: "Mali"; 
+    font-size: 35px;
+    color: white;
+    border-width: 0;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+    /* -- ABOUT ME --*/
+
+h1 {
+    font-family: "nerko one";
+    font-size: 70px;
+    line-height: 25%;
+    display: flex;
+    justify-content: flex-end;
+    padding: 5px 5%; 
+    flex: 1; 
+}
+
+h2{
+    font-family: "mali";
+    font-size: 20px; 
+    line-height: 10%;
+    display: flex; 
+    justify-content: flex-end;
+    padding: 5px 15%;
+    flex: 1;
+}
+
+#self-portrait{
+    padding: 5px 5%; 
+    flex: 2;
+    position: relative;
+    bottom: 150px; 
+}
+
+p{
+    font-family: "mali";
+    font-size: 25px; 
+    line-height: 10%;
+    display: flex; 
+    justify-content: flex-end;
+    padding: 5%;
+}
+    /* -- FOOTER --*/
+
+#footer {
+    background-color: hsl(280, 100%, 92%);
+    display: flex; 
+    justify-content: center;
+    align-content: center;
+    padding: 20px 10%; 
+}
+
+    /* --  --*/
