--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -52,6 +52,23 @@ nav {
     }
 */ 
 
+#main-menu .dropdown {
+    background-color: hsl(280, 100%, 92%);
+    font-family: "mali";
+    margin: 0px;
+    padding: 20px;
+    display: none;
+    }
+
+#main-menu .dropdown a {
+    color: black;
+    font-family: "mali";
+    padding: 25px; 
+    }
+
+#main-menu .sub-menu:hover .dropdown {
+    display: flex;
+    }
 
 /*-- ABOUT ME --*/
 
