--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -169,8 +169,9 @@ h2{
 #self-portrait{
     float: left;
     padding: 0px 5%; 
-    margin-top: 0px;
-    margin-left: 33px;
+    margin-top: 35px;
+    margin-bottom: 15px;
+    margin-left: 20px;
     margin-bottom: 0px;
     }
 
@@ -257,6 +258,26 @@ h2{
     margin-top: 80px;
     margin-bottom: 80px;
     justify-content: center;
+    }
+
+.animation-grid {
+    display: grid;
+    align-items: center;
+    padding:0px 5%;
+    gap: 60px 40px;
+    }
+
+.grid-animate {
+    align-items: center;
+    padding: 0px 10%;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    }
+
+.animate-desc {
+    font-family: "mali";
+    font-size: 16px;
+    text-indent: 15px;
     }
 
 /*-- PROCESS PHOTOS --*/
