--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -243,6 +243,7 @@ h2{
     display: grid;
     grid-template-columns: 600px 600px;
     grid-template-rows: auto;
+    flex-wrap: wrap;
     padding: 0px 9%;
     gap: 60px 60px;
     align-items: center;
