--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -103,6 +103,7 @@ nav {
     border-radius: 15%;
     font-family: "mali";
     font-size: 18px;
+    line-height: 18px;
     margin-top: 5px 0px;
     margin-left: 100px;
     padding: 5px 2%;
@@ -192,9 +193,10 @@ h2{
 
 #self-portrait{
     float: left;
-    padding: 0px 5%; 
-    margin-top: 125px;
-    margin-left: 25px;
+    padding: 0px;
+    margin-top: 80px;
+    margin-left: 75px;
+    margin-right: 45px;
     margin-bottom: 15px;
     }
 
@@ -204,6 +206,7 @@ h2{
     text-indent: 50px;
     line-height: 50px;
     margin-top: 75px;
+    margin-left: -25px;
     margin-bottom: 0px;
     display: flexbox;
     flex-wrap: wrap;
@@ -260,20 +263,19 @@ h2{
     }
 
 .painting-grid {
-    display: grid;
-    grid-template-columns: 600px 600px;
-    grid-template-rows: auto;
-    flex-wrap: wrap;
-    padding: 0px 9%;
-    gap: 60px 60px;
+    justify-content: center;
     align-items: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    padding: 1px 10%;
+    gap: 60px 120px;
     }
 
 .paint-desc {
     font-family: "mali";
     font-size: 16px;
-    margin-left: 25px;
-    margin-right: 125px;
+    flex-wrap: auto;
     }
 
 /*-- PRINT MAKING --*/
@@ -295,14 +297,6 @@ h2{
     margin-bottom: 5px;
     }
 
-.print-project2 {
-    font-family: "mali";
-    font-size: 30px;
-    margin-left: 50px;
-    margin-right: 60px;
-    margin-bottom: 5px;
-}
-
 .print-project-desc1 {
     font-family: "mali";
     font-size: 20px;
@@ -311,6 +305,24 @@ h2{
     margin-right: 60px;
     margin-bottom: 60px;
     }
+
+.print1-grid {
+    justify-content: center;
+    align-items: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    padding: 1px 10%;
+    gap: 60px 100px;
+    }
+
+.print-project2 {
+    font-family: "mali";
+    font-size: 30px;
+    margin-left: 50px;
+    margin-right: 60px;
+    margin-bottom: 5px;
+}
 
 .print-project-desc2 {
     font-family: "mali";
@@ -321,24 +333,14 @@ h2{
     margin-bottom: 60px;
     }
 
-.print1-grid {
-    display: grid;
-    grid-template-columns: 500px 500px;
-    grid-template-rows: auto;
-    padding: 2px 10%;
-    gap: 60px 110px;
-    margin-bottom: 60px;
-    align-items: center;
-    }
-
 .print2-grid {
-    display: grid;
-    grid-template-columns: 500px 500px;
-    grid-template-rows: auto;
-    padding: 2px 10%;
-    gap: 60px 110px;
-    margin-bottom: 60px;
+    justify-content: center;
     align-items: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    padding: 1px 10%;
+    gap: 60px 100px;
     }
 
 .print-desc {
@@ -360,25 +362,28 @@ h2{
     }
 
 .animation-grid {
-    display: grid;
-    grid-template-columns: 500px 500px;
-    grid-template-rows: auto;
-    padding: 0px 10%;
-    margin-top: 60px;
-    gap: 60px 60px;
+    justify-content: center;
     align-items: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    padding: 1x 15%;
+    margin-left: 10%;
+    margin-right: 10%;
+    gap: 60px 180px;
     }
 
 .animate-desc {
     font-family: "mali";
     font-size: 16px;
+    flex-wrap: auto;
     margin-left: 10px;
     }
 
 /*-- CONTACT ME --*/
 
 #contact {
-    padding: 0px 5%;
+    padding: 1px 8%;
     }
 
 .information {
@@ -393,7 +398,8 @@ h2{
 .info {
     font-family: "mali";
     font-size: 30px;
-    margin-left: 35px;
+    margin-top: 5%;
+    margin-left: 0%;
     display: flex;
     justify-content: flex-start;
     }
@@ -402,14 +408,30 @@ h2{
     font-family: "mali";
     color: black;
     font-size: 25px;
-    margin-top: 5px;
+    margin-top: 4px;
     margin-left: 8px;
+    margin-bottom: 60px;
     text-decoration: none;
     }
 
 .email:hover {
     color: blue;
     text-decoration: underline;
+    }
+
+.con-photo {
+    margin-top: -8%;
+    margin-left: 70%;
+    margin-bottom: 5%;
+    }
+    
+.con-message {
+    font-family: "mali";
+    line-height: 35px;
+    font-size: 25px;
+    margin-top: -35%;
+    margin-right: 38%;
+    margin-bottom: 20%;
     }
 
 /*--  --*/
