--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,7 +32,7 @@ body {
 nav {
     background-color: hsl(280, 100%, 92%);
     display:inline-flexbox; 
-    height: 110px;
+    height: 115px;
     justify-content: space-evenly;
     align-items: center; 
     }
@@ -88,9 +88,9 @@ nav {
 }
 
 .med:hover {
-    transition: .5s;
+    transition: .10s;
     text-decoration-line: underline;
-    text-decoration-thickness: 2px;
+    text-decoration-thickness: 2.5px;
     }
 
 .mediums:hover .dropdown {
@@ -172,7 +172,7 @@ nav {
 
 h1 {
     font-family: "nerko one";
-    font-size: 80px;
+    font-size: 70px;
     line-height: 100%;
     margin-top: 125px;
     margin-bottom: 0px;
@@ -255,7 +255,7 @@ h2{
 
 #paintings {
     font-family: "nerko one";
-    font-size: 80px;
+    font-size: 70px;
     line-height: 100%;
     margin-top: 125px;
     margin-bottom: 60px;
@@ -282,7 +282,7 @@ h2{
 
 #printing {
     font-family: "nerko one";
-    font-size: 80px;
+    font-size: 70px;
     line-height: 100%;
     margin-top: 125px;
     margin-bottom: 60px;
@@ -343,6 +343,33 @@ h2{
     gap: 60px 100px;
     }
 
+.print-project3 {
+    font-family: "mali";
+    font-size: 30px;
+    margin-left: 50px;
+    margin-right: 60px;
+    margin-bottom: 5px;
+}
+
+.print-project-desc3 {
+    font-family: "mali";
+    font-size: 20px;
+    margin-top: 5px;
+    margin-left: 80px;
+    margin-right: 60px;
+    margin-bottom: 60px;
+    }
+
+.print3-grid {
+    justify-content: center;
+    align-items: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    padding: 1px 10%;
+    gap: 60px 100px;
+    }
+
 .print-desc {
     font-family: "mali";
     font-size: 16px;
@@ -354,7 +381,7 @@ h2{
 
 #animations {
     font-family: "nerko one";
-    font-size: 80px;
+    font-size: 70px;
     line-height: 100%;
     margin-top: 125px;
     margin-bottom: 60px;
@@ -388,7 +415,7 @@ h2{
 
 .information {
     font-family: "nerko one";
-    font-size: 80px;
+    font-size: 70px;
     line-height: 100%;
     margin-top: 125px;
     margin-bottom: 60px;
