--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -109,6 +109,7 @@ li {
     transition: .10s;
     text-decoration-line: underline;
     text-decoration-thickness: 2.5px;
+    cursor: pointer;
     }
 
 .mediums:hover .dropdown {
@@ -141,7 +142,7 @@ li {
 
 .draw:hover {
     transition: .5s;
-    color: hsl(280, 34%, 46%);
+    color: hsl(281, 34%, 46%);
     font-weight: bolder;
     }
 
@@ -460,7 +461,7 @@ h2{
     }
 
 .email:hover {
-    color: blue;
+    color: hsl(240, 100%, 50%);
     text-decoration: underline;
     }
 
