--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -127,6 +127,10 @@ li {
 .dropdown {
     background-color: hsl(280, 100%, 92%);
     border-radius: 15%;
+        /*-- could also be
+    border-bottom-left-radius: 15%;
+    border-bottom-right-radius: 15%;
+        --*/
     font-family: "mali";
     font-size: 18px;
     line-height: 18px;
@@ -286,6 +290,7 @@ h2{
     margin-top: 80px;
     margin-bottom: 60px;
     justify-content: center;
+    align-items: center;
     }
 
 .painting-grid {
